# findmypredoc

./: .gitignore  .neon  .vercelignore  CLAUDE.md  README.md  vercel.json
.github/workflows/: ingest.yml
api/: README.md  pyproject.toml  requirements.txt  vercel.json
api/app/: config.py  dates.py  db.py  schemas.py  server.py
api/app/routers/: predocs.py  sources.py
app/: README.md  package-lock.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/about/: page.tsx
app/src/components/: FilterBar.tsx  Footer.tsx  Logo.tsx  Pagination.tsx  PredocCards.tsx  PredocTable.tsx
app/src/lib/: api.ts  formatDate.ts
experiments/: one_source_test.py
findmypredoc/: pyproject.toml
findmypredoc/pipeline/: __init__.py
findmypredoc/pipeline/extract/: __init__.py  dates.py  format_schema.py  schema.json
findmypredoc/pipeline/read/: __init__.py  docx.py  google_drive_file.py  pdf.py  website.py
findmypredoc/sources/: Source.py  __init__.py  ejm.py  nber_at_nber.py  nber_not_at_nber.py  predoc.py
service/: README.md  run_pipeline.py
service/schema/: date_columns.sql  parsed_at_column.sql
